--- a/desing.css
+++ b/desing.css
@@ -3,6 +3,9 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -83,24 +86,30 @@ footer {
     background-color: #4CAF50;
     color: white;
     text-align: center;
-    padding: 2px;
+    padding: 0;
     position: fixed;
     bottom: 0;
     width: 100%;
+    margin-top: auto;
 }
 
-/* Adiciona espaço em branco no final dos textos */
-section:last-child {
-    margin-bottom: 200px;
+body p:last-child {
+    padding-bottom: 0px; /* Ajuste este valor de acordo com a altura do seu rodapé */
 }
- #janelaFlutuante {
+p {
+    margin-bottom: 60px; /* Ajuste este valor para o espaço desejado */
+}
+p:last-child {
+    margin-bottom: 20px; /* Ajuste este valor para o espaço desejado */
+}
+
+
+#janelaFlutuante {
     display: none;
     position: fixed;
     top: 50%;
     left: 50%;
-    
-    
-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     padding: 20px;
     background-color: white;
     border: 1px solid #ccc;
