--- a/desing.css
+++ b/desing.css
@@ -6,11 +6,27 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+   background: url(https://grupoaltotiete.com.br/wp-content/uploads/2023/06/Reciclagem-energetica-o-que-e-como-funciona-e-quais-os-beneficios.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 8,5); /* Ajuste a cor e a opacidade conforme necessário */
+    z-index: -1;
 }
 
 header {
-    background-color: #4CAF50;
-    color: white;
+    background-color: 0;
+    color: #21130d;
     text-align: center;
     padding: 1em;
 }
@@ -21,6 +37,17 @@ section {
 
 h2 {
     color: #4CAF50;
+}
+h4 {
+    color: #4CAF50;
+    padding: 2em;
+  
+}
+
+p {
+    color: #ffffff;
+   padding: 2em;
+    margin: 1px;
 }
 
 ul {
@@ -81,38 +108,58 @@ ul {
 .coleta-item[data-imagem="roxo"]:hover {
     background-color: #5E2868; /* Roxo */
 }
+  
+    
+.coleta-item {
+    cursor: pointer;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    color: #ffffff
+}
+  
+
+.coleta-item img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+/* ... restante do seu código CSS ... */
 
 footer {
-    background-color: #4CAF50;
-    color: white;
+    background-color: 0;
+    color:0;
     text-align: center;
     padding: 0;
-    position: fixed;
+    position: outo;
     bottom: 0;
     width: 100%;
-    margin-top: auto;
+    
+}
+footer p {
+    
+    color: 66CDAA; /* Cinza claro */
+    font-weight: 150; /* Texto fino */
+  color: rgba(102,205,170, 0.3); /* Preto com 50% de opacidade */
 }
 
-body p:last-child {
-    padding-bottom: 0px; /* Ajuste este valor de acordo com a altura do seu rodapé */
-}
-p {
-    margin-bottom: 100px; /* Ajuste este valor para o espaço desejado */
-}
-p:last-child {
-    margin-bottom: 20px; /* Ajuste este valor para o espaço desejado */
-}
+  
 
+body > p:last-child {
+    margin-bottom: 150px; /* Ajuste este valor de acordo com a altura do seu rodapé */
+}
 
 #janelaFlutuante {
     display: none;
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 40%;
+    left: 70%;
+    transform: translate(-70%, -10%);
     padding: 20px;
     background-color: white;
-    border: 1px solid #ccc;
+    border: 1px solid #4CAF50;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
